src/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__overlay_anchor_scope.snap
---
source: src/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"overlay_anchor_scope/anchor_scope.one\")"
---
Model: fixtures/overlay_anchor_scope/parent.on
Tests: 0/0
Parameters:
  multiplier = 10
  x = 20
  y = 5
