src/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__overlay_shared_ref.snap
---
source: src/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"design_overlay/shared_ref.on\")"
---
Model: fixtures/design_overlay/shared_ref.on
Tests: 0/0
Parameters:
  mass = 100 :kg
  w_a = 372 :N
  w_b = 372 :N
  total = 744 :N
