src/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__overlay_submodel_with_apply_explicit.snap
---
source: src/oneil_snapshot_tests/src/test.rs
expression: "run_fixture(\"design_overlay/submodel_with_apply.on\")"
---
Model: fixtures/design_overlay/submodel_with_apply.on
Tests: 0/0
Parameters:
  mass = 100 :kg
  w_a = 372 :N
  w_b = 981 :N
  total = 1353 :N
